add picture feature
